5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1745_1535.log
== TEST (2019-05-15 14:11:49) 
-- CODE:
from math import*
x = eval(input("numero real: "))
k = int(input("numero inteiro"))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e + (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+2
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e + (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:12:13) 
-- CODE:
from math import*
x = eval(input("numero real: "))
k = int(input("numero inteiro"))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+2
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:12:19) 
-- CODE:
from math import*
x = eval(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+2
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:19:06) 
-- CODE:
from math import*
x = eval(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+2
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:19:11) 
-- CODE:
from math import*
x = eval(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+2
print(round(e, 6))
		

-- EXECUTION TIME:
1.20646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/1535/main.py", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:26:53) 
-- CODE:
from math import*
x = eval(input("numero real: "))
k = int(input("numero inteiro: "))
c = 3
i = 3
e = 1
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+2
print(round(e, 6))
		

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:13) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 3
i = 3
e = 1
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+2
print(round(e, 6))
		

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:17) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+2
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:39) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+2
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:44) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:52:49) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- EXECUTION TIME:
0.53409
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/1535/main.py", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:50) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:52:50) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- EXECUTION TIME:
0.405328
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/1535/main.py", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:52) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:53) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:55) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:56) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:56) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:57) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:57) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:57) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:52:57) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:36) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:37) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:53:37) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- EXECUTION TIME:
0.290766
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/1535/main.py", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:38) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:53:41) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- EXECUTION TIME:
0.646975
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/1535/main.py", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:53:41) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- EXECUTION TIME:
0.611858
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/1535/main.py", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:53:41) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- EXECUTION TIME:
0.976998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/1535/main.py", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:53:41) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- EXECUTION TIME:
0.94141
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/1535/main.py", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:53:41) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- EXECUTION TIME:
1.17945
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/1535/main.py", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:53:42) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- EXECUTION TIME:
1.71617
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/1535/main.py", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:53:42) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- EXECUTION TIME:
2.17865
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/1535/main.py", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:53) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:53) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:54) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:54) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:22) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:32) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:34) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:54:37) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- EXECUTION TIME:
0.311388
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/1535/main.py", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:03) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:06) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:47) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:48) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:49) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:49) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:49) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:49) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:50) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:50) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:01) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:05) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:06) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:07) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:07) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:14) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:56:32) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- EXECUTION TIME:
0.246572
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/1535/main.py", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:34) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:16) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e - (aux*(x**c)/d)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e - (aux*(x**c)/d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:43) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0
e = 0
aux = 1
while(c<k):
	e = e + ((aux*(x**c)/d))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = e + ((aux*(x**c)/d))
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:26) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
c = 0
i = 0

aux = 1
while(c<k):
	e = x -  ((aux*(x**c)/d))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = x -  ((aux*(x**c)/d))
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:01:02) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
d = 0
b = 0
i = 0
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/d))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
	b = b +2
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    e = x -((aux*(x**b)/d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:02:04) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
d = 3
b = 3

c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/d))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:02:05) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
d = 3
b = 3

c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/d))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
	b = b +2
print(round(e, 6))
		

-- EXECUTION TIME:
0.150709
-- TEST CASE 1:
---- input:
0.6
3
---- correct output:
0.543552
---- user output:
0.596001
-- TEST CASE 2:
---- input:
0.25
3
---- correct output:
0.244987
---- user output:
0.249991
-- TEST CASE 3:
---- input:
0.35
4
---- correct output:
0.336667
---- user output:
0.350009
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:02:06) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
d = 3
b = 3

c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/d))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:02:22) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
d = 3
b = 3

c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/d))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	d = d+2
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:03:56) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))

b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:05:42) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))

b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- EXECUTION TIME:
0.172776
-- TEST CASE 1:
---- input:
0.6
3
---- correct output:
0.543552
---- user output:
0.596001
-- TEST CASE 2:
---- input:
0.25
3
---- correct output:
0.244987
---- user output:
0.249991
-- TEST CASE 3:
---- input:
0.35
4
---- correct output:
0.336667
---- user output:
0.350009
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:06:30) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))

b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	print(e)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.528
0.615552
0.5960009142857142
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:07:03) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))

b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
print(e)
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- ERROR:
File "XXXX", line 11
    if(aux == 1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:07:51) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:08:08) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:08:10) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- EXECUTION TIME:
0.193194
-- TEST CASE 1:
---- input:
0.6
3
---- correct output:
0.543552
---- user output:
0.596001
-- TEST CASE 2:
---- input:
0.25
3
---- correct output:
0.244987
---- user output:
0.249991
-- TEST CASE 3:
---- input:
0.35
4
---- correct output:
0.336667
---- user output:
0.350009
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:09:34) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 3
c= 0
aux = 1
while(c<k):
	e = x *((aux*(x**b)/b))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.002399
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:09:46) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 3
c= 0
aux = 1
while(c<k):
	e = x +((aux*(x**b)/b))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.603999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:23) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:28) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:37) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:48) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:46) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.584448
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:57) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 0
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = x -((aux*(x**b)/b))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:12:07) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 0
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    e = x -((aux*(x**b)/b))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:12:18) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:41) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	print(e)
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.528
0.615552
0.5960009142857142
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:14:51) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	print(e)
	
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.528
0.615552
0.5960009142857142
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:15:06) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 3
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.596001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:18) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.584448
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:15) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = 1
while(c<k):
	e = ((aux*(x**b)/b))-x
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
-0.584448
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:21:29) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.584448
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:22:13) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.584448
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:22:23) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.584448
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:22:31) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = 1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.584448
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:23:56) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.615552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:20) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.615552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:27) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.615552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:38) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.615552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:47) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.615552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:51) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.615552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:24:57) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.615552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:06) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.615552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:13) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.615552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:22) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.615552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:26:08) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.615552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:26:17) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x -((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.615552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:27:39) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x +((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.584448
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:28:26) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = x +((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.584448
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:17) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = -1
while(c<k):
	e = e +((aux*(x**b)/b))
	if(aux == -1):
		aux = 1
	else:
		aux = -1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
-0.543552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:36) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = 1
while(c<k):
	e = e +((aux*(x**b)/b))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.543552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:41) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = 1
while(c<k):
	e = e +((aux*(x**b)/b))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- OUTPUT:
0.543552
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:29:42) 
-- CODE:
from math import*
x = float(input("numero real: "))
k = int(input("numero inteiro: "))
e=0
b = 1
c= 0
aux = 1
while(c<k):
	e = e +((aux*(x**b)/b))
	if(aux == 1):
		aux = -1
	else:
		aux = 1
	
	c = c+1
	b = b +2
print(round(e, 6))
		

-- EXECUTION TIME:
0.123157
-- TEST CASE 1:
---- input:
0.6
3
---- correct output:
0.543552
---- user output:
0.543552
-- TEST CASE 2:
---- input:
0.25
3
---- correct output:
0.244987
---- user output:
0.244987
-- TEST CASE 3:
---- input:
0.35
4
---- correct output:
0.336667
---- user output:
0.336667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
